Create like components and add it to course handlers Remove comment handlers and move into course handlers Update swagger documentation
