# db/entities/like_type.go
@@ -1,0 +1,9 @@
+package entities
+
+type LikeType string
+
+const (
+	LikeType_Like    = "like"
+	LikeType_Dislike = "dislike"
+	LikeType_None    = "none"
+)
