# internals/comment/dto/req/create_comment.go
@@ -2,6 +2,6 @@ package dtoreq
 
 type CreateCommentReq struct {
 	Content  string `json:"content" validate:"required,min=3"`
-	CourseId uint   `json:"courseId" validate:"required,gte=1"`
+	CourseId uint   `json:"-"`
 	ParentId *uint  `json:"parentId" validate:"omitempty,numeric"`
 }
